--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -16,7 +16,7 @@
   right: 0;
   width: 40%;
   height: 100%;
-  background-image: url('/src/assets/grillas/Grilla-Banner.svg');
+  background-image: url('/Grilla-Banner.svg');
   background-repeat: repeat;
   background-size: 80px;
   opacity: 0.05;
