--- a/src/components/InteractiveCarousel.css
+++ b/src/components/InteractiveCarousel.css
@@ -12,7 +12,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/src/assets/tramas/shutterstock_519025633.svg');
+  background-image: url('/shutterstock_519025633.svg');
   background-repeat: repeat;
   background-size: 200px;
   opacity: 0.03;
