--- a/src/pages/CategoryPage.css
+++ b/src/pages/CategoryPage.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/src/assets/tramas/shutterstock_519025633.svg');
+  background-image: url('/shutterstock_519025633.svg');
   background-repeat: repeat;
   background-size: 150px;
   opacity: 0.1;
@@ -159,7 +159,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/src/assets/tramas/shutterstock_326096942.svg');
+  background-image: url('/shutterstock_326096942.svg');
   background-repeat: repeat;
   background-size: 300px;
   opacity: 0.02;
