--- a/src/styles/patterns.css
+++ b/src/styles/patterns.css
@@ -2,32 +2,32 @@
 
 /* Usando los SVG de tramas directamente */
 .pattern-organic {
-  background-image: url('/src/assets/tramas/shutterstock_326096942.svg');
+  background-image: url('/shutterstock_326096942.svg');
   background-repeat: repeat;
   background-size: 200px;
 }
 
 .pattern-triangles {
-  background-image: url('/src/assets/tramas/shutterstock_519025633.svg');
+  background-image: url('/shutterstock_519025633.svg');
   background-repeat: repeat;
   background-size: 150px;
 }
 
 .pattern-stripes {
-  background-image: url('/src/assets/tramas/shutterstock_520474876.svg');
+  background-image: url('/shutterstock_520474876.svg');
   background-repeat: repeat-x;
   background-size: auto 100%;
 }
 
 .pattern-grilla {
-  background-image: url('/src/assets/grillas/Grilla-Banner.svg');
+  background-image: url('/Grilla-Banner.svg');
   background-repeat: repeat;
   background-size: 100px;
 }
 
 /* Patrón de diamantes basado en la grilla */
 .pattern-diamonds {
-  background-image: url('/src/assets/grillas/Grilla-Banner.svg');
+  background-image: url('/Grilla-Banner.svg');
   background-repeat: repeat;
   background-size: 60px;
   opacity: 0.1;
@@ -35,19 +35,19 @@
 
 /* Clases auxiliares para aplicar los patrones */
 .bg-trama-organic {
-  background-image: url('/src/assets/tramas/shutterstock_326096942.svg');
+  background-image: url('/shutterstock_326096942.svg');
   background-repeat: repeat;
   background-size: 300px;
 }
 
 .bg-trama-triangles {
-  background-image: url('/src/assets/tramas/shutterstock_519025633.svg');
+  background-image: url('/shutterstock_519025633.svg');
   background-repeat: repeat;
   background-size: 200px;
 }
 
 .bg-trama-stripes {
-  background-image: url('/src/assets/tramas/shutterstock_520474876.svg');
+  background-image: url('/shutterstock_520474876.svg');
   background-repeat: repeat-x;
   background-position: bottom;
   background-size: auto 40px;
